manifests/shiori/Service-shiori.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiori
  namespace: shiori
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: shiori
  type: ClusterIP
